--- a/styles.css
+++ b/styles.css
@@ -13,17 +13,17 @@ body {
 
 .container {
   display: block;
-  width: 50%;
+  width: 90%;
   margin: auto;
 
 }
 
 .btn {
-  margin: 25px;
+  margin: 1.5rem;
   display: inline-block;
-  height: 200px;
-  width: 200px;
-  border: 10px solid black;
+  height: 10rem;
+  width: 10rem;
+  border: 0.5rem solid black;
   border-radius: 20%;
 }
 
@@ -49,7 +49,7 @@ body {
 }
 
 .pressed {
-  box-shadow: 0 0 20px white;
+  box-shadow: 0 0 1.5rem white;
   background-color: grey;
 }
 
