--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,9 @@ body {
   background-color: grey;
 }
 #leaderboard-title {
+  margin:  5%;
+  color: #FEF2BF;
+  line-height: 1.25;
   font-family: 'Press Start 2P', cursive;
   font-size: 2.5rem;
 }
